feat: cancel bookings, notification service, change password